Release Notes

* 6/19/2018
  * added noChildRetry to recoverLostFiles

* 6/18/2018
  * added hasReadyEvents

* 6/13/2018
  * added harvester_slots

* 6/10/2018
  * added useBrokerOff in catchall

* 5/30/2018
  * enabled aggressive heartbeat check

* 5/23/2018
  * added transpath to global share

* 5/22/2018
  * added guid check in Adder

* 5/18/2018
  * added EC_WorkerDone

* 5/17/2018
  * added syncLevel to updateWorker

* 5/8/2018
  * added getJobStatisticsPerSiteResource

* 5/7/2018
  * schedconfig.capability

* 4/25/2018
  * improved getSitesShareDDM to reflect new endpoint association

* 4/10/2018
  * added updateJobsInBulk

* 4/9/2018
  * added nJobs and computingElement to workers

* 4/6/2018
  * added sj
  * fixed getJobs for notDiscardEvents

* 3/28/2018
  * added harvester_dialogs

* 3/20/2018
  * not to discard events

* 3/16/2018
  * reset stateChangeTime for retried es merge
  * to avoid himem for es merge

* 3/15/2018
  * input files in ZIP_MAP
  * changed ordering of event ranges

* 3/15/2018
  * fixed Freezer not to close sub datasets if resurrected consumer could use them
  * moved from astorages0 to astorages (AGIS request)

* 3/13/2018
  * fill HS06sec for jobs without task (e.g. HC)

* 3/12/2018
  * fixed ppE to reset more attributes
  * changed RSE for _sub of ES jobs

* 2/28/2018
  * changed command messages to INFO

* 2/23/2018
  * added a protection against non-integer transExitCode
  * added a protection not to close dis datasets if resurrected consumer could use them
  * changed ppE not to resurrect consumers killed in defined

* 2/20/2018
  * changed --keepUnmerged to kill jobsets if no events got started

* 2/16/2018
  * added more info when dispatchDBlock failed

* 2/15/2018
  * changed get/updateEvents to take local pilot owner into account

* 2/6/2018
  * locking job in active4 when ppE and getEvents

* 2/2/2018
  * fixed resurrect consumers for consumers killed in assigned

* 1/25/2018
  * added comprehensive heartbeat

* 1/22/2018